# llm-core

./: .secrets.baseline  CHANGELOG.md  README.md  mkdocs.yml  nokeys.env  pyproject.toml  render.yaml  roadmap.md
.github/: copilot-instructions.md
.github/agents/: docs-agent.md  test-agent.md
docs/: contributing.md  getting-started.md  index.md
docs/guides/: params_config.md
scratch_space/02_core/: 00-llm-tools-plan.md  01-track-progress.md  02-dependencies.md  03-chat-configs.md  04-embeddings-configs.md  05-prompts.md  06-structured-chain.md  07-vectorstores.md  08-migration-convo-craft.md  08-migration-laife.md  08-migration-recipamatic.md  08-migration-recipinator.md  08-release-migration.md  09-conditions.md
scratch_space/feature_sample/: 01_sample.ipynb
scratch_space/llm_core_sample/: 01_params.ipynb
scratch_space/vibes/: 01-post-rename-cleanup.md
src/llm_core/: __init__.py
src/llm_core/chains/: __init__.py  exceptions.py  structured_chain.py
src/llm_core/chat/: __init__.py
src/llm_core/config/: sample_config.py
src/llm_core/data_models/: __init__.py  basemodel_kwargs.py
tests/: __init__.py  conftest.py
tests/chains/: test_structured_chain.py
tests/chat/: __init__.py
tests/config/: test_env_vars.py  test_sample_config.py
tests/data_models/: test_basemodel_kwargs.py
tests/embeddings/: __init__.py
tests/metaclasses/: test_singleton.py
tests/params/: test_llm_core_params.py  test_llm_core_paths.py  test_sample_params.py
tests/prompts/: test_prompt_loader.py
tests/testing/: test_fake_chat_model.py
tests/vectorstores/: test_cchroma.py  test_cond.py  test_entity_store.py  test_hasher.py  test_promptable.py  test_vectorable.py
(+48 files in other folders)
