[project]
name = "llm-core"
version = "0.1.0"
description = "Reusable LLM tooling library: multi-provider chat/embeddings configs, structured chains, versioned prompts, and vector store abstractions."
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "loguru>=0.7.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai      = ["langchain-openai>=0.3"]
azure       = ["langchain-openai>=0.3"]
ollama      = ["langchain-ollama>=0.2"]
huggingface = ["langchain-huggingface>=0.1", "sentence-transformers>=3.0"]
chroma      = ["langchain-chroma>=0.1", "chromadb>=0.5"]
all         = ["llm-core[openai,azure,ollama,huggingface,chroma]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_core"]

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "notebook" },
    { include-group = "test" },
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "ruff>=0.9.6",
    "pyright[nodejs]>=1.1.407",
    "pre-commit>=4.1.0",
    "detect-secrets>=1.5.0",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "nbstripout>=0.8.2",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-api-autonav>=0.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
# remember to adjust include paths as needed (eg scripts folder)
include = ["src", "tests"]
